[workspace]
members = ["contracts/*"]

resolver = "2"

[workspace.package]
version = "0.0.1"

# members = ["packages/*", "contracts/*"]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]

exclude = ["contract.wasm", "hash.txt"]

[workspace.dependencies]
cosmwasm-std = { version = "1.2" }
cosmwasm-schema = { version = "1.2" }
cw-controllers = { version = "1.0.1" }
cw-storage-plus = "1.1.0"
thiserror = { version = "1.0" }
schemars = "0.8"
cw-asset = { version = "3.0" }
cw-utils = "1.0.1"
cw2 = "1.0.1"
osmosis-std = "0.16.0"
serde = { version = "1.0.167", default-features = false, features = ["derive"] }

cw-orch = { version = "0.13" }
cw-multi-test = { version = "0.16.5" }

[patch.crates-io]
# Update deps to ~0.13.1 after when its released
cw-orch = { git = "https://github.com/AbstractSDK/cw-orchestrator" }
