[package]
name = "abstract-giftcard-issuer"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
description = "Issuing contract for Giftcard NFTs"
version = "0.0.1"
#version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
# enable node-backed tests (ensure Docker is running)
# run with `cargo test --jobs 1 --features node-tests`
node-tests = ["interface"]
interface = ["export", "dep:abstract-interface", "dep:cw-orch"]
schema = ["abstract-app/schema"]

[dependencies]
abstract-sdk = { version = "0.17.0" }
abstract-app = { version = "0.18.0" }
abstract-core = { version = "0.17.0" }
abstract-dex-adapter = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.17.0", default-features = false }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
osmosis-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cosmos-sdk-proto = { version = "0.19.0", default-features = false, features=["cosmwasm"] }

# Dependencies for interface
abstract-interface = { version = "0.17.0", optional = true }
cw-orch = { workspace = true, optional = true }
cw-paginate = "0.2.1"
cw-asset.workspace = true
cw-controllers.workspace = true
cw-item-set = "0.7.1"
cw-gov-card = { path = "../cw-gov-card", default-features = false }

[dev-dependencies]
abstract-interface = { version = "0.17.0", features = ["daemon"] }
abstract-testing = { version = "0.17.0" }
abstract-sdk = { version = "0.17.0", features = ["test-utils"] }
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
cw-orch = { workspace = true, features = ["daemon", "osmosis-test-tube"] }

abstract-dex-adapter = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.17.0", features = [
  "interface",
] }
cw-gov-card = { path = "../cw-gov-card", features = ["interface"] }
osmosis-test-tube = { version = "16.0" }
prost-types = "0.11.9"
